@@ -1,5 +1,7 @@
 Revision history for Perl extension Catalyst::Plugin::Static::Simple
 
+        - Switch from override to around, because really, wtf
+
 0.28   2010-01-04 13:15:00
         - Fix issues in debug mode. (RT#53338)
 
